updates and refactoring
