# app/database/src/main/kotlin/com/codingmill/bookapi/database/entity/AuthorEntity.kt
@@ -1,0 +1,16 @@
+package com.codingmill.bookapi.database.entity
+
+import javax.persistence.*
+
+@Entity
+@Table(name = "Authors")
+data class Author (
+
+    @Id
+    @GeneratedValue(strategy = GenerationType.AUTO)
+    val authorId: Long? =  null,
+
+    val name: String = "",
+
+    //var books : List<BookEntity> = mutableListOf()
+)
