# app/openapi/gensrc/src/main/kotlin/com/codingmill/bookapi/generated/data/BookDTO.kt
@@ -21,7 +21,7 @@ import io.swagger.v3.oas.annotations.media.Schema
  * @param category 
  * @param isbn 
  */
-data class Book(
+data class BookDTO(
 
     @Schema(example = "null", required = true, description = "")
     @field:JsonProperty("id", required = true) val id: kotlin.Long,
@@ -30,7 +30,7 @@ data class Book(
     @field:JsonProperty("name", required = true) val name: kotlin.String,
 
     @Schema(example = "null", required = true, description = "")
-    @field:JsonProperty("author", required = true) val author: kotlin.String,
+    @field:JsonProperty("author", required = true) val author: kotlin.Long,
 
     @Schema(example = "null", required = true, description = "")
     @field:JsonProperty("category", required = true) val category: kotlin.String,
